<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/header" >

    <Button
        android:id="@+id/btn_title_back"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@drawable/mm_title_btn_back"
        android:focusable="true"
        android:gravity="center"
        android:minWidth="70dp"
        android:text="@string/cancel"
        android:textColor="@color/btn_text_title" />

    <TextView
        android:id="@+id/tv_headerTitle"
        style="@style/text_title"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:text="@string/title" />

    <Button
        android:id="@+id/btn_title_ok"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:background="@drawable/mm_title_btn_right"
        android:contentDescription="@string/image"
        android:gravity="center"
        android:text="@string/ok"
        android:minWidth="70dp"
        android:textColor="@color/btn_text_title" />

</LinearLayout>