<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include layout="@layout/addfloor_head"/>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray"
        android:layout_weight="1">
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="0"
            android:stretchColumns="1">>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flooricon"
                    android:textColor="@color/black"
                    android:id="@+id/tv_flooricon"
                    android:layout_span="1"
                    android:layout_column="0"
                    android:textSize="30dp"
                    android:layout_weight="10"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="25dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/iv_flooricon"
                    android:src="@mipmap/floor1"
                    android:layout_column="1"
                    android:layout_span="9"
                    android:layout_weight="10"
                    android:layout_gravity="bottom|left" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/floorname"
                    android:textColor="@color/black"
                    android:id="@+id/tv_floorname"
                    android:layout_span="1"
                    android:layout_column="0"
                    android:textSize="30dp"
                    android:layout_weight="10"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="25dp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:hint="默认"
                    android:textColor="@color/black"
                    android:id="@+id/et_floorname"
                    android:layout_height="wrap_content"
                    android:layout_span="9"
                    android:layout_column="1"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="10"
                    android:layout_marginTop="25dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/floorselect"
                    android:textColor="@color/black"
                    android:id="@+id/tv_floorselect"
                    android:layout_span="1"
                    android:layout_column="0"
                    android:textSize="30dp"
                    android:layout_weight="10"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="25dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:hint="1"
                    android:id="@+id/tv_floorselectlog"
                    android:layout_height="60dp"
                    android:layout_span="9"
                    android:inputType="number"
                    android:layout_column="1"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="10"
                    android:layout_marginTop="25dp"
                    android:clickable="true"
                    android:textSize="20dp" />
            </TableRow>
        </TableLayout>

    </FrameLayout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray"
        android:layout_weight="40">
    </FrameLayout>
</LinearLayout>
